Add HomeScene.